# counter-anchor

./: Anchor.toml  Cargo.toml  README.md  pnpm-lock.yaml
.github/actions/setup/: action.yml
.github/workflows/: main.yml  publish-js-client.yml  publish-rust-client.yml
clients/js/: package.json
clients/js/test/: increment.test.ts
clients/rust/: Cargo.toml
clients/rust/tests/: create.rs
program/: Cargo.toml  idl.json
program/src/: lib.rs
scripts/: generate-clients.mjs
scripts/ci/: set-env.mjs
